maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:111: error: not found: value getNeihborRelativePos
  var (xn:Int, yn:Int, canAccess:Boolean) = getNeihborRelativePos(x, y, np);
                                            ^